# NeuroIgniter-AI-Recruiter

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run.py  streamlit_app.py
.github/workflows/: ci.yml
api/: main.py
config/: config.yaml
dashboard/: app.py
eval/: metrics.py
output/: neuroigniter_submission.csv  neuroigniter_submission.xlsx  ranking_stats.json
src/neuroigniter/: __init__.py  jd_parser.py  ontology.py  ranker.py  semantic.py
src/neuroigniter/retrieval/: __init__.py  hybrid.py
tests/: __init__.py  test_integration.py  test_ranker_v2.py  test_semantic.py
